--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
         <artifactId>postgresql</artifactId>
         <version>42.2.9</version>
     </dependency>
+    <dependency>
+        <groupId>log4j</groupId>
+        <artifactId>log4j</artifactId>
+        <version>1.2.17</version>
+    </dependency>
   </dependencies>
 
   <build>
