--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
         <artifactId>log4j</artifactId>
         <version>1.2.17</version>
     </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>5.3.9</version>
+    </dependency>
   </dependencies>
 
   <build>
